--- a/public/terms.html
+++ b/public/terms.html
@@ -11,6 +11,7 @@
     gtag('config', 'G-L7T4V00FZY');
   </script>
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="iElR__C3ULZ5_5VOV9zHBCx1F-mlX4PM3D6RWzpvsKA">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Terms of Use - Gemini Watermark Remover</title>
   <script src="https://cdn.tailwindcss.com"></script>
